--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@
 
 [Ss]prites/
 [Pp]lugins/
-[Rr]esorces/
+[Rr]esources/
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
